--- a/woman_care/android/app/src/main/AndroidManifest.xml
+++ b/woman_care/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.woman_care">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="woman_care"
         android:icon="@mipmap/ic_launcher">
