--- a/woman_care/pubspec.yaml
+++ b/woman_care/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_core: ^1.1.0
   google_sign_in: ^5.0.2
   fancy_bottom_navigation: ^0.3.3
+  dartz: ^0.9.2
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
