--- a/woman_care/pubspec.yaml
+++ b/woman_care/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fancy_bottom_navigation: ^0.3.3
   dartz: ^0.9.2
   http: ^0.13.3
+  fl_chart: ^0.36.1
 
 dev_dependencies:
   flutter_test:
